--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dian web portofolio</title>
+    <title>Dian's Web Portofolio</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <nav>
+      <div class="logo"></div>
+
+      <section></section>
+    </nav>
+  </body>
 </html>
