--- a/index.html
+++ b/index.html
@@ -11,7 +11,81 @@
     <nav>
       <div class="logo"></div>
 
-      <section></section>
+      <section>
+        <a class="nav-item" href="#home">Home</a>
+        <a class="nav-item" href="#fasilitas">Our Profile</a>
+        <a class="nav-item" href="">Achievement</a>
+        <a class="nav-item" href="pesan">Message Us</a>
+      </section>
     </nav>
+
+    <hr />
+
+    <section class="section-container">
+      <!-- home -->
+      <section id="home">
+        <header>
+          <h1>Hi Dian, Welcome to website!</h1>
+        </header>
+
+        <article>
+          <p>Lorem ipsum dolor sit amet.</p>
+
+          <div class="banner-home"></div>
+        </article>
+      </section>
+
+      <hr />
+
+      <!-- our facilitation -->
+      <section id="fasilitas">
+        <header>
+          <h1>Our Facilitation</h1>
+        </header>
+
+        <article class="fasilitas">
+          <div>
+            <div style="width: 50px; height: 50px; border: 1px solid red"></div>
+            <h4>Professional Teacher</h4>
+          </div>
+
+          <div>
+            <div style="width: 50px; height: 50px; border: 1px solid red"></div>
+            <h4>Sport Field</h4>
+          </div>
+
+          <div>
+            <div style="width: 50px; height: 50px; border: 1px solid red"></div>
+            <h4>Classroom</h4>
+          </div>
+        </article>
+      </section>
+
+      <hr />
+
+      <!-- message us -->
+      <section id="pesan">
+        <header>
+          <h1>Message Us</h1>
+        </header>
+
+        <section class="pesan">
+          <!-- FORM -->
+          <section>
+            <form>
+              <label>Name</label>
+              <input />
+            </form>
+          </section>
+
+          <!-- HASIL -->
+          <section class="hasil">
+            <div class="form-hasil"></div>
+          </section>
+        </section>
+      </section>
+    </section>
+
+    <footer></footer>
   </body>
 </html>
