--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <nav class="skrol">
+    <nav>
       <div class="logo"></div>
 
       <section>
@@ -72,7 +72,9 @@
               style="width: 100px; height: 100px; border-radius: 80px"
             ></div>
             <h4 style="text-align: center">
-              <a href="" style="text-decoration: none">Professional Teacher</a>
+              <a href="https://man2kotapadang.sch.id/gtk/"
+                >Professional Teacher</a
+              >
             </h4>
           </div>
 
@@ -81,7 +83,9 @@
               class="olahraga"
               style="width: 100px; height: 100px; border-radius: 80px"
             ></div>
-            <h4 style="text-align: center">Sport Field</h4>
+            <h4 style="text-align: center">
+              <a href="https://man2kotapadang.sch.id/fasilitas/">Sport Field</a>
+            </h4>
           </div>
 
           <div>
@@ -89,7 +93,9 @@
               class="ruangan"
               style="width: 100px; height: 100px; border-radius: 80px"
             ></div>
-            <h4 style="text-align: center">Classroom</h4>
+            <h4 style="text-align: center">
+              <a href="https://man2kotapadang.sch.id/fasilitas/">Classroom</a>
+            </h4>
           </div>
         </article>
       </section>
@@ -137,10 +143,54 @@
           <section class="hasil">
             <div class="form-hasil">
               <div>
-                <p>Nama: <span id="sender-full-name"></span></p>
-                <p>Tanggal Lahir: <span id="sender-birth-date"></span></p>
-                <p>Jenis Kelamin: <span id="sender-gender"></span></p>
-                <p>Pesan: <span id="sender-messages"></span></p>
+                <p>
+                  Nama:
+                  <span
+                    id="sender-full-name"
+                    style="
+                      font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                        'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana,
+                        sans-serif;
+                      font-size: large;
+                    "
+                  ></span>
+                </p>
+                <p>
+                  Tanggal Lahir:
+                  <span
+                    id="sender-birth-date"
+                    style="
+                      font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                        'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana,
+                        sans-serif;
+                      font-size: large;
+                    "
+                  ></span>
+                </p>
+                <p>
+                  Jenis Kelamin:
+                  <span
+                    id="sender-gender"
+                    style="
+                      font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                        'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana,
+                        sans-serif;
+                      font-size: large;
+                    "
+                  ></span>
+                </p>
+                <p>
+                  Pesan:
+                  <span
+                    id="sender-messages"
+                    style="
+                      font-family: 'Lucida Sans', 'Lucida Sans Regular',
+                        'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana,
+                        sans-serif;
+                      font-size: large;
+                    "
+                  ></span>
+                </p>
               </div>
             </div>
           </section>
